<resources>
    <string name="app_name">AppIris</string>
    <string name="select_gender">Please select your sex</string>
    <string name="saved_message">Image saved!</string>
    <string name="error">An Internal error has occurred</string>
    <string name="activity_title_main">Filters</string>
    <string name="action_settings">Settings</string>
    <string name="filters">Filters</string>
    <string name="edit">Edit</string>
    <string name="leftImage">L</string>
    <string name="image_gallery_saved">Image saved to gallery!</string>
    <string name="rightImage">R</string>
    <string name="lbl_brightness">Brightness</string>
    <string name="lbl_contrast">Contrast</string>
    <string name="lbl_saturation">Saturation</string>
    <string name="tab_filters">Filters</string>
    <string name="tab_edit">Edit</string>
    <string name="roboto_medium" translatable="false">sans-serif-medium</string>
    <string name="filter_normal">Normal</string>
    <string name="action_save">Save</string>
    <string name="action_analyze">Analyze</string>
    <string name="share">Share</string>
    <string name="with_scheme">With scheme</string>
    <string name="only_image">Only image</string>
    <string name="action_open">Open</string>
    <string name="title_activity_image_filters" translatable="false">ImageFilters</string>
    <string name="permission_denied">Permission denied</string>
    <string name="select_a_picture">Select a picture</string>
    <string name="take_photo_right">Take Right Iris</string>
    <string name="take_photo_left">Take Left Iris</string>
    <string name="load_photo_right">Load Right Iris</string>
    <string name="taking_photo_right">Taking right iris</string>
    <string name="taking_photo_left">Taking left iris</string>
    <string name="load_photo_left">Load Left Iris</string>
    <string name="loading">Loading ...</string>
    <string name="uploading">Uploading ...</string>
    <string name="blur_photo">Please try to make a better focus of the iris, The photo is blurry </string>
    <string name="alert">Alert</string>
    <string name="search_user">Search ...</string>
    <string name="birth_date">Birth date *:</string>
    <string name="email">Email *:</string>
    <string name="missing_email">Please introduce a valid email</string>
    <string name="analyzed">Analyzed</string>
    <string name="full_name">Full name *</string>
    <string name="gender">Sex * :</string>
    <string name="weigh">Weigh Kg *:</string>
    <string name="size">Size Cm *:</string>
    <string name="create_account">Create account</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="kl">KL</string>
    <string name="country">Country:</string>
    <string name="city">City:</string>
    <string name="cm">CM</string>
    <string name="facebook_application_id" translatable="false">576804335994079</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb576804335994079</string>
    <string name="twitter_consumer_key" translatable="false">PO3Lvdik3PMNoeUmLR7l9JKtD</string>
    <string name="twitter_consumer_secret" translatable="false">n7FeljOE12SkvP49OiDQ4CYmVLQaQJkgB2WbMXH8R7pEe0S6hw</string>
    <string name="register">Register now</string>
    <string name="skip_register">Register later</string>
    <string name="analyze_with_expert">Analyze with an expert</string>
    <string name="finish">Finish</string>
    <string name="show_iris">Show iris</string>
    <string name="save">Save</string>
    <string name="send">Send</string>
    <string name="affected_organs">Affected organs</string>
    <string name="add_affected_organs">Add affected organs</string>
    <string name="nutritional_supplements">Nutritional supplements</string>
    <string name="recommendations">Recommendations</string>
    <string name="no_doctor">You have to analyze it with a doctor to see this field</string>
    <string name="about_app">
        Aplicación que brindara Accesibilidad, confiabilidad, seguridad, veracidad
y calidad al momento de interpretar la estructura del iris, esta aplicación brindara un
posible estado de salud general y especifico de la salud de las personas, con base
en la iridologia; también se ofrece la posibilidad de hacer seguimiento a las
respectivas evoluciones evidenciadas en el iris. Además, el usuario puede pagar
por una consulta personalizada, donde nuestros iridologos interpretaran de manera
clara y especifica los iris de las personas y dar un diagnóstico y tratamiento más
acertado de acuerdo al estado de salud particular “Salud al alcance de su mano”.
Nuestro principal objetivo es llegar a todo el mundo siendo accesibles a cualquier
tipo de usuario y así mejorar el estado de salud particular y general de una
población.
    </string>
    <string name="appiris">App iris </string>
    <string name="title_iridologia">Que es la iridologia </string>
    <string name="go_to_main_screen">Main screen</string>
    <string name="sign_in">Sign in</string>
</resources>