<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.sergiogeek7.appiris.ImageFilters"
    >
    <item
        android:orderInCategory="100"
        android:title="@string/action_save"
        app:showAsAction="ifRoom"
        android:id="@+id/share"
        android:icon="@drawable/ic_compartir"
        />
    <item
        android:id="@+id/load_from_gallery"
        android:orderInCategory="101"
        android:title="@string/share"
        app:showAsAction="ifRoom"
        android:visible="false"
        android:icon="@drawable/ic_galeria"
        />
    <item
        android:orderInCategory="102"
        android:title="@string/go_to_main_screen"
        android:id="@+id/go_to_main_screen"
        />

</menu>