<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sergiogeek7.appiris.AddResultsDoctor"
    android:orientation="vertical">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/gradient_solo"
        >

        <Button
            android:layout_width="65dp"
            android:id="@+id/save_btn"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:background="@null"
            android:drawableTop="@drawable/ic_guardar_1"
            android:text="@string/save"
            android:onClick="save"
            android:textColor="@color/tw__solid_white"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:id="@+id/send_btn"
            android:visibility="gone"
            android:layout_marginTop="16dp"
            android:background="@null"
            android:drawableTop="@drawable/ic_enviar"
            android:text="@string/send"
            android:onClick="send"
            android:textColor="@color/tw__solid_white"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="16dp"
            android:onClick="goToShowIris"
            android:background="@null"
            android:drawableTop="@drawable/ic_zoom"
            android:text="@string/show_iris"
            android:textColor="@color/tw__solid_white"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:paddingTop="24dp"
        android:background="@color/tab_background"
        >
        <com.example.sergiogeek7.appiris.components.TabIris
            android:id="@+id/affected_organs_tab"
            android:onClick="changeEditorTab"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/affected_organs"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="4dp"
            />
        <com.example.sergiogeek7.appiris.components.TabIris
            android:layout_width="0dp"
            android:id="@+id/nutritional_supplements_tab"
            android:layout_weight="1"
            android:onClick="changeEditorTab"
            android:layout_height="wrap_content"
            android:text="@string/nutritional_supplements"
            />
        <com.example.sergiogeek7.appiris.components.TabIris
            android:layout_width="0dp"
            android:layout_weight="1"
            android:id="@+id/recommendations_tab"
            android:onClick="changeEditorTab"
            android:layout_height="wrap_content"
            android:text="@string/recommendations"
            android:layout_marginEnd="4dp"
            />
    </LinearLayout>

<EditText
    android:id="@+id/content_text"
    android:layout_width="match_parent"
    android:gravity="top|start"
    android:padding="12dp"
    android:layout_height="270dp"
    android:layout_margin="8dp"
    android:hint="@string/no_doctor"
    android:inputType="textCapSentences|textMultiLine"
    android:maxLength="2000"
    android:lines="100"
    android:background="@drawable/text_area"
    />

    <Button
        android:id="@+id/done_btn"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_gravity="center"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/gradient"
        android:onClick="done"
        android:paddingEnd="90dp"
        android:paddingStart="90dp"
        android:drawableEnd="@drawable/send_vector"
        android:drawablePadding="3dp"
        android:layout_marginTop="8dp"
        android:text="@string/send"
        android:textColor="@color/tw__solid_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/content_text" />

</LinearLayout>
