<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingTop="8dp"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context="com.example.sergiogeek7.appiris.about">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:background="@drawable/gradient"
            android:onClick="aboutApp"
            android:paddingEnd="70dp"
            android:id="@+id/about_app"
            android:paddingStart="70dp"
            android:text="@string/appiris"
            android:textColor="@color/tw__solid_white" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/gradient"
            android:onClick="aboutIridologia"
            android:paddingEnd="20dp"
            android:layout_gravity="center"
            android:paddingStart="20dp"
            android:text="@string/title_iridologia"
            android:textColor="@color/tw__solid_white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/content_text"
            tools:text="@string/about_app"
            android:padding="16dp"
            />
    </LinearLayout>
</ScrollView>

