<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sergiogeek7.appiris.ShowIris">

    <com.github.chrisbanes.photoview.PhotoView
        android:id="@+id/photo_view"
        android:layout_width="280dp"
        android:layout_height="220dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="250dp"
        android:layout_height="220dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="16dp"
        android:gravity="top|start"
        android:padding="12dp"
        android:layout_margin="8dp"
        android:hint="@string/add_affected_organs"
        android:inputType="textCapSentences|textMultiLine"
        android:maxLength="2000"
        android:lines="100"
        android:background="@drawable/text_area"
        />

    <Button
        android:id="@+id/left_image"
        android:layout_width="65dp"
        android:layout_marginStart="24dp"
        android:layout_alignParentStart="true"
        android:layout_marginTop="8dp"
        android:onClick="setLeftEye"
        android:background="@drawable/gradient_button"
        android:drawableStart="@drawable/ic_iris1"
        android:layout_height="25dp"
        android:paddingStart="5dp"
        android:text="@string/leftImage"
        android:textColor="@color/tw__solid_white"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/photo_view" />

    <Button
        android:id="@+id/right_image"
        android:layout_width="65dp"
        android:layout_height="25dp"
        android:layout_marginTop="8dp"
        android:onClick="setRightEye"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/image_preview"
        android:layout_marginEnd="24dp"
        android:background="@drawable/gradient_button"
        android:drawableEnd="@drawable/ic_iris1"
        android:paddingEnd="5dp"
        android:text="@string/rightImage"
        android:textColor="@color/tw__solid_white"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="14dp"
        android:layout_gravity="center"
        android:layout_marginEnd="8dp"
        android:onClick="end"
        android:layout_marginStart="8dp"
        android:background="@drawable/gradient"
        android:paddingEnd="50dp"
        android:paddingStart="50dp"
        android:text="@string/finish"
        android:textColor="@color/tw__solid_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/description" />

</android.support.constraint.ConstraintLayout>
