<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sergiogeek7.appiris.DetectActivity">

    <com.example.sergiogeek7.appiris.InteractiveEyeVIew
        android:id="@+id/eye_view"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@android:color/background_light"
        />

    <com.example.sergiogeek7.appiris.components.ButtonIris
        android:id="@+id/left_image"
        android:layout_width="70dp"
        android:layout_height="30dp"
        android:paddingStart="5dp"
        android:layout_marginStart="8dp"
        android:enabled="false"
        android:onClick="onLeftImage"
        android:textColor="@color/tw__solid_white"
        android:textSize="12sp"
        android:layout_below="@+id/eye_view"
        android:drawableStart="@drawable/ic_iris1"
        android:background="@drawable/gradient_button"
        android:layout_alignStart="@+id/eye_view"
        android:layout_alignParentStart="true"
        android:text="@string/leftImage"
        android:layout_marginTop="8dp"
        />

    <com.example.sergiogeek7.appiris.components.ButtonIris
        android:id="@+id/right_image"
        android:layout_width="70dp"
        android:textColor="@color/tw__solid_white"
        android:layout_height="30dp"
        android:layout_marginEnd="8dp"
        android:textSize="12sp"
        android:paddingEnd="5dp"
        android:layout_alignEnd="@+id/eye_view"
        android:layout_below="@+id/eye_view"
        android:layout_alignParentEnd="true"
        android:onClick="onRightImage"
        android:text="@string/rightImage"
        android:drawableEnd="@drawable/ic_iris1"
        android:background="@drawable/gradient_button"
        android:layout_marginTop="8dp"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@+id/left_image"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:background="@drawable/gradient"
        android:onClick="analyzeWithExpert"
        android:paddingEnd="70dp"
        android:paddingStart="70dp"
        android:text="@string/analyze_with_expert"
        android:textColor="@color/tw__solid_white"/>

</RelativeLayout>
